# OpenJarvis

./: .cursorrules  .dockerignore  .env.example  .gitignore  .windsurfrules  AGENTS.md  BRYAN_MANUAL_ACTIONS_REQUIRED.md  CHANGELOG.md  CLAUDE.md  Dockerfile  JARVIS_OMNIX_HANDOFF.md  JARVIS_OMNIX_HANDOFF.md.backup  OMNIX_WORKBENCH.md  Procfile  README.md  STATUS.md  US14A1_CERTIFICATION.md  VANTA-export_dc.html  mkdocs.yml  pyproject.toml  railway.toml
.claude/: settings.json
.claude/agents/: automation-auditor.md  aws-deployment-safety-reviewer.md  backend-implementer.md  cloud-infra-planner.md  connector-specialist.md  default-automation-router.md  docs-matrix-maintainer.md  endpoint-security-smoke-runner.md  fargate-runtime-verifier.md  frontend-mobile-implementer.md  handoff-continuity-keeper.md  memory-sync-specialist.md  merge-coordinator.md  mobile-cloud-parity-reviewer.md  no-skip-blocker-auditor.md  plan-acceptance-reviewer.md  plan2-coordinator.md  plan4-6-mega-sprint-architect.md  plugin-mcp-risk-reviewer.md  quality-score-reviewer.md  regression-triage-reviewer.md  secret-sanitization-auditor.md  security-reviewer.md  tauri-release-gate-reviewer.md  ui-ux-product-reviewer.md  validation-reporter.md
.claude/commands/: auto-execute.md  automation-ledger.md  autonomous-takeover-check.md  checkpoint-regression.md  crash-resume.md  endpoint-security-audit.md  fargate-proof.md  full-auto-setup.md  handoff-resume-check.md  handoff-save.md  jarvis-plan.md  no-skip-audit.md  parallel-auto.md  parallel-plan2.md  plan-acceptance-review.md  plan2-next.md  plan2-report.md  plan2-sprint.md  plan4-6-mega-sprint.md  plugin-risk-review.md  post-plan2-automation-status.md  quality-score.md  safe-merge-review.md  secret-scan-deep.md  secret-scan.md  status-roadmap.md  stop-on-blocker.md  tauri-release-gate.md  ui-product-polish-review.md  validate-openjarvis.md
.claude/hooks/: README.md  guard-acceptance-label.sh  guard-credential-file-read.sh  guard-no-git-add-all.sh  remind-action-ledger.sh  remind-diff-check.sh  remind-handoff-update.sh  warn-env-access.sh  warn-tauri-build.sh
.github/: CODEOWNERS
.github/clone-stats/: badge.json  clone-data.json
.github/workflows/: autotag.yml  ci.yml  desktop.yml  jarvis-remote.yml  pypi-publish.yml
.openjarvis_validation/us14a1/: frontend-build.txt  pytest.txt
deploy/aws/: Dockerfile  Dockerfile.full  README.md  cloud_runtime.py  env.example  main.tf  mobile_userdata.sh  mobile_userdata_full.sh  mobile_userdata_simple.sh  mobile_userdata_ubuntu.sh  template.yaml  update_apigw_origin.sh
deploy/docker/: .env.example  docker-compose.yml
deploy/launchd/: com.openjarvis.plist  com.vanta.wake.listener.plist
deploy/posthog/: posthog-hetzner-prep.sh
deploy/systemd/: openjarvis.service
docs/: FINAL_PHASE_A_DAILY_DRIVER_READINESS.md  JARVIS_95_PERCENT_AUTONOMY_TARGET.md  JARVIS_AGENT_REGISTRY_AND_CONTRACTS.md  JARVIS_BLOCKER_LEDGER.md  JARVIS_COMPANY_ORG.md  JARVIS_COMPLETION_GAP_REGISTER.md  JARVIS_CONSTITUTION.md  JARVIS_FUTURE_PROOF_ARCHITECTURE_PRINCIPLES.md  JARVIS_NO_GAP_CERTIFICATION_SUITE.md  JARVIS_REPLACEMENT_CERTIFICATION_SUITE.md  JARVIS_ROUTING_MODEL_POLICY.md  JARVIS_TOKEN_COST_GOVERNANCE.md  JARVIS_ZERO_CARRYOVER_BLOCKER_TABLE.md  MOBILE_ACCESS_HANDOFF.md  NO_GAP_FULL_BLOCKER_CLOSURE_CERTIFICATION.md  NUS1A_LEARNING_FOUNDATION.md  NUS1B_RECOMMENDATION_WORKFLOW.md  NUS1C_SAFE_AUTOPILOT.md  NUS1F_CONTROLLED_HIGH_AUTONOMY.md  ORCHESTRATOR.md  PLAN4_CERTIFICATION.md  PLAN7_CERTIFICATION.md  PLAN9_CROSS_DEVICE_PARITY.md  PLAN_8B_AUTHORITY_COCKPIT_CERTIFICATION.md  PLAN_8_TRUSTED_DELEGATION_CERTIFICATION.md  POST_NUS_COMPANY_AGENT_ORCHESTRATOR_PLAN.md  POST_PLAN7_UI_POLISH_CERTIFICATION.md  PREFINAL_REQUIRED_BLOCKERS_AND_MACOS_POLISH_CERTIFICATION.md  PRE_FINAL_BLOCKER_CLOSURE_CERTIFICATION.md  RELEASE_CHECKLIST.md  ROLLBACK.md  TRUE_MACBOOK_OFF_RUNTIME.md  US12_PRODUCT_POLISH.md  US13_DAILY_DRIVER_CERTIFICATION.md  US14_CERTIFICATION.md  US14_RELEASE_DISTRIBUTION.md  US15_US16_FOUNDATION.md  US17_US18_READINESS.md  VANTA_DEPLOY_NOTES.md  WAVE4_EXPANSION.md  (+8 more)
docs/architecture/: engine.md  learning.md  overview.md
docs/automation/: CRASH_RESUME_GUIDE.md  MCP_PLUGIN_EXPANSION_PLAN.md  PLAN4_6_READINESS_CHECKLIST.md  POST_PLAN2_AUTOMATION_MATRIX.md  POST_PLAN2_AUTOMATION_PROGRESS_LEDGER.md  POST_PLAN2_AUTOMATION_RESUME_PROMPT.md  POST_PLAN2_AUTOMATION_SESSION_STATE.md  post_plan2_automation_matrix.json
docs/certification/: APPLE_SIGNING_PERSONAL_BASELINE_REVIEW.md  LATEST_CURSOR_HANDOFF_REPORT.md  NO_GAP_REALITY_AUDIT.md  PLAN1_ECC_LIVE_KEY_VALIDATION.md  PLAN1_ECC_MINIMAL_PROVIDER_KEYS.md  PLAN1_ECC_MISSING_KEYS.md  PLAN1_FINAL_STATUS.md  PLAN_9_FINAL_ACCEPTANCE_REVIEW.md  no_gap_reality_audit.json  plan1_ecc_live_key_validation.json  plan1_ecc_minimal_provider_keys.json  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
frontend/src-tauri/src/: lib.rs
scripts/: _memory_clean_start.py  _verify_p0_p1.py  build-local.sh  build-sign-personal.sh  install_wake_listener.sh  jarvis-omnix  migrate_google_tokens_to_vault.py  mobile-serve.sh  omnix-status  omnix-workbench  plan9_hud_browser_proof.py  plan9_macbook_off_proof.py  plan9_mobile_cloud_proof.py  plan9_mobile_live_auth_proof.py  plan9_parity_proof.py  release-local.sh  set_operator_pin.py
tests/: conftest.py  test_cost_control_law.py  test_final_hold_correction.py  test_governance.py  test_macbook_off_security_retest.py  test_plan7_phase_k_dogfood.py  test_plan8_authority.py  test_plan9_cross_device_parity.py  test_real_cloud_integration.py  test_remote_runtime_finalization.py  test_sprint3_company_org_mobile.py  test_sprint3_no_partial_closure.py  test_universal_mobile_runtime.py  test_us10_hardening.py  test_us11_intelligence_trust.py  test_us12_polish.py  test_us13_certification.py  test_us13_voice_readiness.py  test_us14_release.py  test_voice_cli.py
tools/: ecc_full_registry.py  ecc_inventory.py  ecc_traceability.py
(+965 files in other folders)
